Fri Oct  6 04:47:07 2006  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/depend: Install digest.h.

Fri Oct  6 04:27:40 2006  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/lib/md5.rb, ext/digest/lib/sha1.rb: Remove those
	  compatibility stub libraries.

	* sample/openssl/c_rehash.rb: Use digest/md5 instead of obsolete md5.

Fri Oct  6 04:09:51 2006  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/digest.c: Make hexdigest() always call digest() internally.

	* ext/digest/digest.c: Add bubblebabble().

Fri Oct  6 02:38:42 2006  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/digest.c: Allow subclassing in Ruby.

Fri Oct  6 02:06:10 2006  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/digest.c (hexdigest_str_new): Add a string size check.

Thu Oct  5 19:28:35 2006  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/digest.[ch]: Since the argument order of
	  hash_final_func_t was inconsistent with others, change it and
	  rename to hash_finish_func_t to avoid confusion.

	* ext/digest/digest.[ch]: Remove and eliminate the use of
	  hash_end_func_t.  Implement hexdigest conversion in the base
	  class.

	* ext/digest/md5/md5.c, ext/digest/md5/md5.h,
	  ext/digest/md5/md5init.c, ext/digest/md5/md5ossl.c,
	  ext/digest/md5/md5ossl.h: Remove MD5_End() and change
	  MD5_Final() to MD5_Finish().

	* ext/digest/rmd160/depend, ext/digest/rmd160/extconf.rb,
	  ext/digest/rmd160/rmd160.c, ext/digest/rmd160/rmd160.h,
	  ext/digest/rmd160/rmd160hl.c, ext/digest/rmd160/rmd160init.c,
	  ext/digest/rmd160/rmd160ossl.c, ext/digest/rmd160/rmd160ossl.h:
	  Remove unused functions RMD160_End(), RMD160_File(),
	  RMD160_Data() and change RMD160_Final() to RMD160_Finish().

	* ext/digest/sha1/extconf.rb, ext/digest/sha1/sha1.c,
	  ext/digest/sha1/sha1.h, ext/digest/sha1/sha1hl.c,
	  ext/digest/sha1/sha1init.c, ext/digest/sha1/sha1ossl.c,
	  ext/digest/sha1/sha1ossl.h: Likewise.

	* ext/digest/sha2/extconf.rb, ext/digest/sha2/sha2.c,