@@ -1,3 +1,9 @@
+Fri Oct  6 06:53:46 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* eval.c (rb_yield_0): small refactoring.
+
+	* parse.y (bparam_item): fixed bugs in handling parenthesized LHS.
+
 Fri Oct  6 04:47:07 2006  Akinori MUSHA  <knu@iDaemons.org>
 
 	* ext/digest/depend: Install digest.h.
